[gd_scene load_steps=18 format=3 uid="uid://lamvkbimis6w"]

[ext_resource type="Script" uid="uid://q20cfg421dk3" path="res://assets/scripts/node_shop.gd" id="1_ailxb"]
[ext_resource type="Script" uid="uid://cwl0f3gu5lltq" path="res://assets/scenes/shop_menu_button.gd" id="2_86i15"]
[ext_resource type="Texture2D" uid="uid://dk8qpofymsfcy" path="res://assets/food_sprites/cookie.png" id="3_7jjxu"]
[ext_resource type="Texture2D" uid="uid://doe53kg8olr0e" path="res://assets/sprites/logos/net_shop_nihongo-removebg-preview.png" id="3_86i15"]
[ext_resource type="AudioStream" uid="uid://btb7fgupl22yn" path="res://assets/sounds/start_menu_button.wav" id="3_ub7dq"]
[ext_resource type="Texture2D" uid="uid://cdexln1hdqp85" path="res://assets/food_sprites/cake.PNG" id="4_4te5m"]
[ext_resource type="AudioStream" uid="uid://cymo6pia5cs1c" path="res://assets/sounds/bad_input.wav" id="4_cgw5f"]
[ext_resource type="AudioStream" uid="uid://jse2fi02146e" path="res://assets/sounds/correct_sound.wav" id="5_cgw5f"]
[ext_resource type="Texture2D" uid="uid://bre4lay70nuk3" path="res://assets/food_sprites/Ice_cream.PNG" id="5_ub7dq"]
[ext_resource type="Texture2D" uid="uid://b1qd7mhqhas3s" path="res://assets/food_sprites/curryRice.PNG" id="6_cgw5f"]
[ext_resource type="Shader" uid="uid://c5m5rt8te47ee" path="res://assets/shader/node_start_menu.gdshader" id="6_g1w7w"]
[ext_resource type="Texture2D" uid="uid://bvlkj74exwem2" path="res://assets/backgrounds/shop_menu/shop_background.png" id="7_wm3et"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1x316"]
border_width_left = 3
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pfjqd"]
shader = ExtResource("6_g1w7w")
shader_parameter/pixels_per_second = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kf13m"]
bg_color = Color(0.6, 0.6, 0.6, 0.627451)
border_width_left = 6
border_width_top = 6
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eij6y"]
border_width_left = 6
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4n6b"]
bg_color = Color(0.6, 0.6, 0.6, 0.627451)
border_width_left = 6
border_width_top = 3
border_width_right = 3
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)

[node name="Node_Shop" type="Node"]
script = ExtResource("1_ailxb")

[node name="Node2D" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_86i15")

[node name="AudioStreamPlayer_reg_button_pressed" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("3_ub7dq")

[node name="AudioStreamPlayer_bad_input" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("4_cgw5f")

[node name="AudioStreamPlayer_correct_answer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("5_cgw5f")

[node name="PanelContainer_question_control_menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 517.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1x316")

[node name="Control_shop_item_menu" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu"]
layout_mode = 2

[node name="Control_Coins_and_Storage_Available" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu"]
anchors_preset = 0
offset_left = 542.0
offset_top = 80.0
offset_right = 1084.0
offset_bottom = 198.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control_Coins_and_Storage_Available"]
texture_repeat = 2
material = SubResource("ShaderMaterial_pfjqd")
position = Vector2(-228, 748)
scale = Vector2(2.7, 2.7)
texture = ExtResource("7_wm3et")

[node name="Panel1" type="Panel" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control_Coins_and_Storage_Available"]
layout_mode = 0
offset_left = 2.0
offset_top = -54.0
offset_right = 544.0
offset_bottom = 100.0

[node name="Label_coin_wallet" type="Label" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control_Coins_and_Storage_Available/Panel1"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 542.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 50
text = "所持コイン: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control_Coins_and_Storage_Available"]
layout_mode = 0
offset_left = 2.0
offset_top = 106.0
offset_right = 544.0
offset_bottom = 290.0

[node name="Label_storage" type="Label" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control_Coins_and_Storage_Available/Panel2"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 542.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 30
text = "　　　ケーキ:
アイスクリーム:
　カレーライス:
　　 クッキー:"
vertical_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu"]
anchors_preset = 0
offset_top = 314.0
offset_right = 1144.0
offset_bottom = 1602.0

[node name="Control_cookie" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control"]
anchors_preset = 0
offset_left = 164.0
offset_top = 70.0
offset_right = 489.0
offset_bottom = 527.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_cookie"]
layout_mode = 0
offset_right = 325.0
offset_bottom = 325.0
texture = ExtResource("3_7jjxu")
expand_mode = 2

[node name="Button_cookie" type="Button" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_cookie"]
custom_minimum_size = Vector2(325, 100)
layout_mode = 0
offset_top = 355.0
offset_right = 325.0
offset_bottom = 455.0
theme_override_font_sizes/font_size = 40
text = "Buy (123 coins)"

[node name="Control_cake" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 164.0
offset_top = 711.0
offset_right = 489.0
offset_bottom = 1168.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_cake"]
layout_mode = 0
offset_right = 325.0
offset_bottom = 325.0
texture = ExtResource("4_4te5m")
expand_mode = 2

[node name="Button_cake" type="Button" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_cake"]
custom_minimum_size = Vector2(325, 100)
layout_mode = 0
offset_top = 355.0
offset_right = 325.0
offset_bottom = 455.0
theme_override_font_sizes/font_size = 40
text = "Buy (10 coins)"

[node name="Control_iceCream" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 653.0
offset_top = 70.0
offset_right = 978.0
offset_bottom = 527.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_iceCream"]
layout_mode = 0
offset_right = 325.0
offset_bottom = 325.0
texture = ExtResource("5_ub7dq")
expand_mode = 2

[node name="Button_iceCream" type="Button" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_iceCream"]
custom_minimum_size = Vector2(325, 100)
layout_mode = 0
offset_top = 355.0
offset_right = 325.0
offset_bottom = 455.0
theme_override_font_sizes/font_size = 40
text = "Buy (3 coins)"

[node name="Control_CurryRice" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 653.0
offset_top = 711.0
offset_right = 978.0
offset_bottom = 1168.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_CurryRice"]
layout_mode = 0
offset_right = 325.0
offset_bottom = 325.0
texture = ExtResource("6_cgw5f")
expand_mode = 2

[node name="Button_curryRice" type="Button" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_CurryRice"]
custom_minimum_size = Vector2(325, 100)
layout_mode = 0
offset_top = 355.0
offset_right = 325.0
offset_bottom = 455.0
theme_override_font_sizes/font_size = 40
text = "Buy (25 coins)"

[node name="Control_ShopLogo" type="Control" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu"]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 25.0
offset_right = 450.0
offset_bottom = 193.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control_ShopLogo"]
layout_mode = 0
offset_left = 54.0
offset_top = -39.0
offset_right = 372.0
offset_bottom = 279.0
texture = ExtResource("3_86i15")
expand_mode = 1

[node name="PanelContainer_persistent_menu_border" type="PanelContainer" parent="CanvasLayer"]
offset_right = 517.0
offset_bottom = 834.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kf13m")

[node name="Control_persistent_menu" type="Control" parent="CanvasLayer/PanelContainer_persistent_menu_border"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu"]
layout_mode = 0
offset_left = 20.0
offset_top = 30.0
offset_right = 487.0
offset_bottom = 794.0
theme_override_constants/separation = 80
alignment = 1

[node name="Button_Back" type="Button" parent="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="Button_Save" type="Button" parent="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Save"

[node name="Button_Options" type="Button" parent="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="Button_Quit" type="Button" parent="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="Control_Whole_Screen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer_ef_display" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 834.0
offset_right = -1151.0
offset_bottom = -317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eij6y")

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer/PanelContainer_ef_display"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/PanelContainer_ef_display/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(508, 511)
render_target_update_mode = 4

[node name="PanelContainer_ef_info" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1351.0
offset_right = -1151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y4n6b")

[connection signal="pressed" from="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_cookie/Button_cookie" to="CanvasLayer" method="_on_button_cookie_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_cake/Button_cake" to="CanvasLayer" method="_on_button_cake_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_iceCream/Button_iceCream" to="CanvasLayer" method="_on_button_ice_cream_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_question_control_menu/Control_shop_item_menu/Control/Control_CurryRice/Button_curryRice" to="CanvasLayer" method="_on_button_curry_rice_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu/VBoxContainer/Button_Back" to="CanvasLayer" method="_on_button_back_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_persistent_menu_border/Control_persistent_menu/VBoxContainer/Button_Quit" to="CanvasLayer" method="_on_button_quit_pressed"]
